# ultimate-portfolio

./: .gitignore  README.md  pyproject.toml
docs/: assessment-process.md  quant-python-libraries.md  research-methodology.md  strategy.md
docs/research/: 2026-05-08-candidate-screen.md  2026-05-08-current-portfolio-backtest.md  2026-05-08-daily-check.md  2026-05-08-monthly-assessment.md  2026-05-08-proxy-regime-suite.md  2026-05-08-quarterly-review.md  2026-05-08-research-suite.md
examples/: adopter_metrics.csv  asset_universe.csv  positions.csv  prices_sample.csv  review_history.csv
src/hierarchical_etf/: __init__.py  cli.py  strategy.py
src/ultimate_portfolio/: __init__.py  assessment.py  cli.py  data.py  dca.py  research.py  risk.py  strategy.py
tests/: test_assessment.py  test_operations.py  test_research.py  test_strategy.py
